Postpone/resume records (UI)

--- a/app/Resources/public/less/themes/theme-allblacks.less
+++ b/app/Resources/public/less/themes/theme-allblacks.less
@@ -58,6 +58,14 @@ p a {
         background-color: #000;
     }
 
+    &.postponed {
+        border-color: #00638f;
+
+        .legend {
+            color: #00638f;
+        }
+    }
+
     &.private {
         border-color: #ff6247;
 
