--- a/app/Resources/public/less/themes/theme-azure.less
+++ b/app/Resources/public/less/themes/theme-azure.less
@@ -37,6 +37,14 @@ p a {
         background-color: #fbfbfb;
     }
 
+    &.postponed {
+        border-color: #3a8eb7;
+
+        .legend {
+            color: #3a8eb7;
+        }
+    }
+
     &.private {
         border-color: #dc322f;
 
