--- a/app/Resources/public/less/themes/theme-humanity.less
+++ b/app/Resources/public/less/themes/theme-humanity.less
@@ -37,6 +37,14 @@ p a {
         background-color: #f4f0ec;
     }
 
+    &.postponed {
+        border-color: #cb842e;
+
+        .legend {
+            color: #cb842e;
+        }
+    }
+
     &.private {
         border-color: #dc322f;
 
