--- a/app/Resources/public/less/themes/theme-emerald.less
+++ b/app/Resources/public/less/themes/theme-emerald.less
@@ -37,6 +37,14 @@ p a {
         background-color: #fbfbfb;
     }
 
+    &.postponed {
+        border-color: #00638f;
+
+        .legend {
+            color: #00638f;
+        }
+    }
+
     &.private {
         border-color: #dc322f;
 
