--- a/app/Resources/public/less/etraxis-controls.less
+++ b/app/Resources/public/less/etraxis-controls.less
@@ -124,7 +124,16 @@ select {
 .dropdown {
     display: inline-block;
 
+    .ui-button-icon {
+        margin-right: -8px;
+    }
+
     .ui-menu {
         position: absolute;
+
+        a {
+            display: block;
+            padding: 3px 12px;
+        }
     }
 }
